# overengineered-rust

./: .envrc  README.md  default.nix  flake.nix
crates/axum-server/: Cargo.toml  build.rs
crates/axum-server/proto/: example.proto
crates/axum-server/src/: main.rs
crates/axum-server/src/api_keys/: mod.rs
crates/axum-server/src/user_management/: login.rs  mod.rs  models.rs  register.rs
crates/db/: Cargo.toml  build.rs  lib.rs  queries.rs
crates/db/migrations/: 20240115025658_user_tables.sql  20240115030000_user_auth.sql
crates/db/queries/: user.sql
